完成钻石    opengl + glfw的c++程序

--- a/src/glfwOpengl/CMakeLists.txt
+++ b/src/glfwOpengl/CMakeLists.txt
@@ -9,4 +9,6 @@ include_directories(D:/EnglishSoftware/c++Env/opengl/glad/src)
 link_directories(D:/EnglishSoftware/c++Env/opengl/glfw/lib-mingw-w64)
 
 add_executable(glfwOpengl main.cpp D:/EnglishSoftware/c++Env/opengl/glad/src/glad.c)
+add_executable(test test.cpp D:/EnglishSoftware/c++Env/opengl/glad/src/glad.c)
 target_link_libraries(glfwOpengl glfw3.dll )
+target_link_libraries(test glfw3.dll )
