完成了球的真实光照模拟 有高光 可以移动光源 可以移动视角 但是和qt结合没有成功 需要继续努力

--- a/src/DiamondandLinebyQt+glfwOnWindows/CMakeLists.txt
+++ b/src/DiamondandLinebyQt+glfwOnWindows/CMakeLists.txt
@@ -4,6 +4,11 @@ project(Qt-CMake-HelloWorld)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 #set(CMAKE_PREFIX_PATH "F:/bigSoftware/qt/6.2.0/mingw81_64/lib/cmake")
+include_directories(G:/environment/c++Env/opengl/glm)
+include_directories(G:/environment/c++Env/opengl/glad/include)
+include_directories(G:/environment/c++Env/opengl/glad/src)
+include_directories(G:/environment/c++Env/opengl/glfw/include)
+link_directories(G:/environment/c++Env/opengl/glew/lib/Release/x64)
 
 find_package(Qt6 COMPONENTS Core)
 find_package(Qt6 COMPONENTS Gui)
@@ -16,13 +21,17 @@ find_package(Qt6 COMPONENTS OpenGLWidgets)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTORCC ON)
-
+include_directories(G:/environment/c++Env/opengl/glm)
 include_directories(D:/EnglishSoftware/c++Env/opengl/freeglut-msvc/include) # 添加include头文件目录
-link_directories(D:/EnglishSoftware/c++Env/opengl/freeglut-msvc/lib/x64) # 添加lib库目录
-add_executable(helloworld main.cpp mainwindow.h mainwindow.cpp Diamond.h Diamond.cpp Line.cpp Line.h)
+link_directories(G:/environment/c++Env/opengl/glfw/lib-mingw-w64)
+
+add_executable(helloworld main.cpp mainwindow.h mainwindow.cpp Diamond.h Diamond.cpp
+        Line.cpp Line.h PolygonMine.cpp PolygonMine.h PointMine.cpp PointMine.h
+        ColorCube.cpp ColorCube.h G:/environment/c++Env/opengl/glad/src/glad.c )
 target_link_libraries(helloworld
         Qt::Core
         Qt::Gui
         Qt::OpenGL
         Qt::OpenGLWidgets
-        Qt::Widgets )
+        Qt::Widgets
+        glfw3.dll)
