复制粘贴的天空盒 很不错

--- a/src/glfwOnWindows/CMakeLists.txt
+++ b/src/glfwOnWindows/CMakeLists.txt
@@ -23,6 +23,7 @@ add_executable(sixEdgeFigure sixEdgeFigure.cpp G:/environment/c++Env/opengl/glad
 add_executable(colorCube colorCube.cpp utilClass/stb_image.h utilClass/stb_image.cpp G:/environment/c++Env/opengl/glad/src/glad.c)
 add_executable(ballLight ball.cpp utilClass/stb_image.h utilClass/stb_image.cpp G:/environment/c++Env/opengl/glad/src/glad.c)
 add_executable(cubeLight cubeLight.cpp utilClass/stb_image.h utilClass/stb_image.cpp G:/environment/c++Env/opengl/glad/src/glad.c)
+add_executable(cubemaps_skybox cubemaps_skybox.cpp utilClass/stb_image.h utilClass/stb_image.cpp G:/environment/c++Env/opengl/glad/src/glad.c)
 
 
 target_link_libraries(static_diamond glfw3.dll  )
@@ -31,3 +32,4 @@ target_link_libraries(sixEdgeFigure glfw3.dll glew32.lib opengl32.dll)
 target_link_libraries(colorCube glfw3.dll glew32.lib opengl32.dll )
 target_link_libraries(ballLight glfw3.dll glew32.lib opengl32.dll )
 target_link_libraries(cubeLight glfw3.dll glew32.lib opengl32.dll )
+target_link_libraries(cubemaps_skybox glfw3.dll glew32.lib opengl32.dll )
