--- a/src/glfwOnWindows/CMakeLists.txt
+++ b/src/glfwOnWindows/CMakeLists.txt
@@ -4,8 +4,11 @@ project(glfwOpengl)
 include_directories("C:/Program Files (x86)/Eigen3/include")
 set(OpenCV_DIR "G:/environment/c++Env/opencv")
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
-
 set(CMAKE_CXX_STANDARD 14)
+
+
+
+find_package(OpenCV REQUIRED)
 
 include_directories(G:/environment/c++Env/opengl/glfw/include)
 include_directories(G:/environment/c++Env/opengl/glad/include)
@@ -23,7 +26,8 @@ add_executable(sixEdgeFigure sixEdgeFigure.cpp G:/environment/c++Env/opengl/glad
 add_executable(colorCube colorCube.cpp utilClass/stb_image.h utilClass/stb_image.cpp G:/environment/c++Env/opengl/glad/src/glad.c)
 add_executable(ballLight ball.cpp utilClass/stb_image.h utilClass/stb_image.cpp G:/environment/c++Env/opengl/glad/src/glad.c)
 add_executable(cubeLight cubeLight.cpp utilClass/stb_image.h utilClass/stb_image.cpp G:/environment/c++Env/opengl/glad/src/glad.c)
-add_executable(cubemaps_skybox cubemaps_skybox.cpp utilClass/stb_image.h utilClass/stb_image.cpp G:/environment/c++Env/opengl/glad/src/glad.c)
+add_executable(skybox cubemaps_skybox.cpp utilClass/stb_image.h utilClass/stb_image.cpp G:/environment/c++Env/opengl/glad/src/glad.c)
+add_executable(besaier besaier.cpp)
 
 
 target_link_libraries(static_diamond glfw3.dll  )
@@ -32,4 +36,5 @@ target_link_libraries(sixEdgeFigure glfw3.dll glew32.lib opengl32.dll)
 target_link_libraries(colorCube glfw3.dll glew32.lib opengl32.dll )
 target_link_libraries(ballLight glfw3.dll glew32.lib opengl32.dll )
 target_link_libraries(cubeLight glfw3.dll glew32.lib opengl32.dll )
-target_link_libraries(cubemaps_skybox glfw3.dll glew32.lib opengl32.dll )
+target_link_libraries(skybox glfw3.dll glew32.lib opengl32.dll )
+target_link_libraries(besaier  ${OpenCV_LIBS})
